# ROBOMASTER-HORIZON-LiDAR-2025

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md
src/: CMakeLists.txt
src/radar2025/: CMakeLists.txt  config.h  main.cpp  package.xml
src/radar2025/Config/: default.yaml
src/radar2025/GUI/: GUI.cpp
src/radar2025/RadarClass/ByteTracker/: CMakeLists.txt  README.md
src/radar2025/RadarClass/ByteTracker/include/: ByteTrackerWrapper.h
src/radar2025/RadarClass/ByteTracker/include/ByteTrack/: Object.h
src/radar2025/RadarClass/ByteTracker/src/: ByteTrackerWrapper.cpp
src/radar2025/RadarClass/ByteTracker/src/ByteTrack/: Object.cpp  Rect.cpp
src/radar2025/RadarClass/Camera/: README.md
src/radar2025/RadarClass/Camera/include/: camera.h
src/radar2025/RadarClass/Camera/src/: VideoRecorder.cpp  camera.cpp
src/radar2025/RadarClass/Common/include/: public.h
src/radar2025/RadarClass/Detectors/: README.md
src/radar2025/RadarClass/Detectors/include/: depthProcesser.h
src/radar2025/RadarClass/Detectors/src/: ArmorDetector.cpp  CarDetector.cpp  depthProcesser.cpp
src/radar2025/RadarClass/Location/: README.md
src/radar2025/RadarClass/Location/include/: MapMapping.h
src/radar2025/RadarClass/Location/src/: MapMapping.cpp  location.cpp
src/radar2025/RadarClass/Logger/src/: Logger.cpp
src/radar2025/RadarClass/PointCloudVisualizer/: README.md
src/radar2025/RadarClass/PointCloudVisualizer/include/: PointCloudVisualizer.h
src/radar2025/RadarClass/PointCloudVisualizer/src/: PointCloudVisualizer.cpp
src/radar2025/RadarClass/Radar/: README.md
src/radar2025/RadarClass/Radar/include/: Radar.h
src/radar2025/RadarClass/Radar/src/: Radar.cpp
src/radar2025/RadarClass/TRTGenerator/sample/: CMakeLists.txt
src/radar2025/RadarClass/TRTInference/: README.md
src/radar2025/RadarClass/TRTInference/sample/: CMakeLists.txt
src/radar2025/RadarClass/UART/: README.md
src/radar2025/RadarClass/UART/include/: GameData.h  UART.h  UARTTester.h  serial.h
src/radar2025/RadarClass/UART/src/: UART.cpp  UARTPasser.cpp  UARTTester.cpp  serial.cpp
src/radar2025/launch/: OfflinePointCloudPub.launch  OfflinePointCloudPub_and_Rviz.launch  radar2025.launch  radar2025_with_OfflinePointCloudPub.launch  radar2025_with_OfflinePointCloudPub_and_Rviz.launch
src/radar2025/params/: Config_0.SJTU.Config  MapMappingPoints.json  camera0.SJTU.yaml  params.txt
src/radar2025/resources/: README.md
src/radar2025/tools/: offline_point_cloud_pub.cpp
